# strawberry-graphos-linting-demo

./: data.json  main.py  pyproject.toml
.github/workflows/: graphql-lint.yml  schema-check.yml  schema-publish.yml
app/: schema.py
